--- a/conf/modules.config
+++ b/conf/modules.config
@@ -40,24 +40,11 @@ process {
         ]
     }
 
-    withName: 'GUNZIP_.*' {
-        publishDir = [
-            path: { "${params.outdir}/genome" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: params.save_reference
-        ]
-    }
-
-    withName: 'UNTAR_.*' {
-        ext.args2 = '--no-same-owner'
-    }
-
     withName: STAR_GENOMEGENERATE {
         ext.args   = params.read_length ? "--sjdbOverhang ${params.read_length - 1}" : ''
     }
 
-    withName: 'UNTAR_.*|STAR_GENOMEGENERATE' {
+    withName: 'STAR_GENOMEGENERATE' {
         publishDir = [
             path: { "${params.outdir}/genome/index" },
             mode: params.publish_dir_mode,
@@ -365,82 +352,4 @@ process {
             pattern: "*.{vcf.gz,vcf.gz.tbi}"
         ]
     }
-}
-
-// VARIANT ANNOTATION
-
-process {
-
-    withName: 'ENSEMBLVEP' {
-        ext.args    = '--everything --filter_common --per_gene --total_length --offline'
-        if(!params.vep_cache){
-            container   = { params.genome ? "nfcore/vep:104.3.${params.genome}" : "nfcore/vep:104.3.${params.vep_genome}" }
-        }
-        publishDir  = [
-            mode: params.publish_dir_mode,
-            path: { "${params.outdir}/reports/EnsemblVEP/${meta.id}" },
-            pattern: "*html",
-            enabled: !params.skip_multiqc
-        ]
-    }
-
-    withName: 'SNPEFF' {
-        ext.args    = '-nodownload -canon -v'
-        if(!params.snpeff_cache){
-            container   = { params.genome ? "nfcore/snpeff:5.0.${params.genome}" : "nfcore/snpeff:5.0.${params.snpeff_db.split('\\.')[0]}" }
-        }
-        publishDir  = [
-            mode: params.publish_dir_mode,
-            path: { "${params.outdir}/reports/SnpEff/${meta.id}" },
-            pattern: "*.{csv,html,txt}",
-            saveAs: { params.annotate_tools.contains('snpeff') ? it : null },
-            enabled: !params.skip_multiqc
-        ]
-    }
-
-    withName: 'TABIX_BGZIPTABIX' {
-        publishDir  = [
-            path: { "${params.outdir}/variant_annotation/${meta.id}" },
-            enabled: true,
-            mode: params.publish_dir_mode,
-            pattern: "*.{gz,gz.tbi}"
-        ]
-    }
-}
-
-if( (params.annotate_tools) && (params.annotate_tools.contains('snpeff')) ) {
-    process {
-        withName: 'NFCORE_RNAVAR:RNAVAR:ANNOTATE:SNPEFF_ANNOTATE:TABIX_BGZIPTABIX' {
-            ext.prefix = {"${meta.id}_snpEff.ann.vcf"}
-        }
-    }
-}
-
-if( (params.annotate_tools) && (params.annotate_tools.contains('vep')) ) {
-    process {
-        withName: 'NFCORE_RNAVAR:RNAVAR:ANNOTATE:ENSEMBLVEP_ANNOTATE:TABIX_BGZIPTABIX' {
-            ext.prefix = {"${meta.id}_VEP.ann.vcf"}
-        }
-    }
-}
-
-if( (params.annotate_tools) && (params.annotate_tools.contains('merge')) ) {
-    process {
-        withName: 'NFCORE_RNAVAR:RNAVAR:ANNOTATE:MERGE_ANNOTATE:TABIX_BGZIPTABIX' {
-            ext.prefix = {"${meta.id}_snpEff_VEP.ann.vcf"}
-        }
-    }
-
-    withName: FASTQC {
-        ext.args = '--quiet'
-    }
-
-    withName: CUSTOM_DUMPSOFTWAREVERSIONS {
-        publishDir = [
-            path: { "${params.outdir}/pipeline_info" },
-            mode: params.publish_dir_mode,
-            pattern: '*_versions.yml'
-        ]
-    }
-
 }
