--- a/conf/modules/annotate.config
+++ b/conf/modules/annotate.config
@@ -62,7 +62,7 @@ process {
 
     // SNPEFF THEN VEP
     if (params.annotate_tools && params.annotate_tools.split(',').contains('merge')) {
-        withName: "NFCORE_SAREK:SAREK:VCF_ANNOTATE_ALL:VCF_ANNOTATE_MERGE:ENSEMBLVEP_VEP" {
+        withName: "NFCORE_RNAVAR:RNAVAR:VCF_ANNOTATE_ALL:VCF_ANNOTATE_MERGE:ENSEMBLVEP_VEP" {
             // If merge: Output file will have format *_snpEff_VEP.ann.vcf, *_snpEff_VEP.ann.json or *_snpEff_VEP.ann.tab
             ext.prefix       = { vcf.baseName - ".ann.vcf" + "_VEP.ann" }
         }
@@ -70,7 +70,7 @@ process {
 
     // ALL ANNOTATION annotate_TOOLS
     if (params.annotate_tools && (params.annotate_tools.split(',').contains('snpeff') || params.annotate_tools.split(',').contains('vep') || params.annotate_tools.split(',').contains('merge'))) {
-        withName: "NFCORE_SAREK:SAREK:VCF_ANNOTATE_ALL:.*:(TABIX_BGZIPTABIX|TABIX_TABIX)" {
+        withName: "NFCORE_RNAVAR:RNAVAR:VCF_ANNOTATE_ALL:.*:(TABIX_BGZIPTABIX|TABIX_TABIX)" {
             ext.prefix       = { input.name - ".vcf" }
             publishDir       = [
                     mode: params.publish_dir_mode,
@@ -81,7 +81,7 @@ process {
     }
 
     if (params.annotate_tools && (params.annotate_tools.split(',').contains('snpeff') || params.annotate_tools.split(',').contains('merge'))) {
-        withName: 'NFCORE_SAREK:SAREK:VCF_ANNOTATE_ALL:VCF_ANNOTATE_SNPEFF:TABIX_BGZIPTABIX' {
+        withName: 'NFCORE_RNAVAR:RNAVAR:VCF_ANNOTATE_ALL:VCF_ANNOTATE_SNPEFF:TABIX_BGZIPTABIX' {
             publishDir       = [
                 mode: params.publish_dir_mode,
                 path: { "${params.outdir}/annotation/${meta.variantcaller}/${meta.id}/" },
