fix output folder

--- a/conf/modules/annotate.config
+++ b/conf/modules/annotate.config
@@ -53,7 +53,7 @@ process {
                 ],
                 [
                     mode: params.publish_dir_mode,
-                    path: { "${params.outdir}/annotation/${meta.variantcaller}/${meta.id}/" },
+                    path: { "${params.outdir}/variant_annotation/${meta.id}/" },
                     pattern: "*{gz}"
                 ]
             ]
@@ -74,7 +74,7 @@ process {
             ext.prefix       = { input.name - ".vcf" }
             publishDir       = [
                     mode: params.publish_dir_mode,
-                    path: { "${params.outdir}/annotation/${meta.variantcaller}/${meta.id}/" },
+                    path: { "${params.outdir}/variant_annotation/${meta.id}/" },
                     pattern: "*{gz.tbi}"
             ]
         }
@@ -84,7 +84,7 @@ process {
         withName: 'NFCORE_RNAVAR:RNAVAR:VCF_ANNOTATE_ALL:VCF_ANNOTATE_SNPEFF:TABIX_BGZIPTABIX' {
             publishDir       = [
                 mode: params.publish_dir_mode,
-                path: { "${params.outdir}/annotation/${meta.variantcaller}/${meta.id}/" },
+                path: { "${params.outdir}/variant_annotation/${meta.id}/" },
                 pattern: "*{gz,gz.tbi}",
                 saveAs: { params.annotate_tools.split(',').contains('snpeff') ? it : null }
             ]
