--- a/conf/modules.config
+++ b/conf/modules.config
@@ -120,7 +120,7 @@ process {
     // ALIGN_STAR
 
     withName: STAR_ALIGN {
-        ext.args   = [
+        ext.args   = { [
             '--outSAMtype BAM SortedByCoordinate',
             '--readFilesCommand zcat',
             params.save_unaligned ? '--outReadsUnmapped Fastx' : '',
@@ -129,7 +129,7 @@ process {
             params.star_max_memory_bamsort > 0 ? "--limitBAMsortRAM ${params.star_max_memory_bamsort}" : "",
             params.star_bins_bamsort > 0 ? "--outBAMsortingBinsN ${params.star_bins_bamsort}" : "",
             params.star_max_collapsed_junc > 0 ? "--limitOutSJcollapsed ${params.star_max_collapsed_junc}" : ""
-        ].join(' ').trim()
+            ].flatten().unique(false).join(' ').trim() }
         publishDir = [
             [
                 path: { "${params.outdir}/reports/stats/${meta.id}/STAR_log" },
