--- a/.editorconfig
+++ b/.editorconfig
@@ -27,6 +27,6 @@ indent_size = unset
 [README.md]
 indent_style = unset
 
-# ignore python
-[*.{py}]
+# ignore python and markdown (is taken care off by prettier)
+[*.{py,md}]
 indent_style = unset
