Update modules.config reverted back to using genome

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -373,7 +373,7 @@ process {
     withName: 'SNPEFF' {
         ext.args    = '-nodownload -canon -v'
         if(!params.snpeff_cache){
-            container   = { params.snpeff_db ? "nfcore/snpeff:5.1.${params.snpeff_db.split('\\.')[0]}" : "nfcore/snpeff:5.1.${params.genome}"}
+            container   = { params.genome ? "nfcore/snpeff:5.1.${params.genome}" : "nfcore/snpeff:5.1.${params.snpeff_db.split('\\.')[0]}"}
         }
         publishDir  = [
             mode: params.publish_dir_mode,
