Modification for indexation on gvcf

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -313,15 +313,16 @@ process {
         ext.args    = [
             '--dont-use-soft-clipped-bases',
             params.gatk_hc_call_conf ? "--standard-min-confidence-threshold-for-calling $params.gatk_hc_call_conf" : '',
-            params.bam_csi_index ? "--create-output-variant-index false" : ""
+            params.bam_csi_index ? "--create-output-variant-index true" : ""
         ].join(' ').trim()
         publishDir  = [ enabled: false ]
     }
     withName: GATK4_HAPLOTYPECALLERGVCF {
         ext.args    = [
             '--dont-use-soft-clipped-bases',
+            '-ERC GVCF',
             params.gatk_hc_call_conf ? "--standard-min-confidence-threshold-for-calling $params.gatk_hc_call_conf" : '',
-            params.bam_csi_index ? "--create-output-variant-index false" : "", "-ERC GVCF"
+            params.bam_csi_index ? "--create-output-variant-index true" : ""
         ].join(' ').trim()
         ext.prefix = {"${meta.id}.haplotypecaller"}
         publishDir  = [ enabled: false ]
