--- a/nextflow.config
+++ b/nextflow.config
@@ -103,8 +103,8 @@ params {
     hook_url                     = null
     help                         = false
     version                      = false
-    modules_testdata_base_path   = 'https://github.com/nf-core/test-datasets/raw/modules/data/'
-    pipelines_testdata_base_path = 'https://github.com/nf-core/test-datasets/raw/modules/data/'
+    modules_testdata_base_path   = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data'
+    pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data'
 
     // Config options
     config_profile_name        = null
