--- a/conf/modules.config
+++ b/conf/modules.config
@@ -184,13 +184,13 @@ process {
         publishDir  = [ enabled: false ]
     }
 
-    withName: 'GATK4_MARKDUPLICATES' {
+    withName: 'PICARD_MARKDUPLICATES' {
         ext.args   = [
             '--ASSUME_SORTED true',
             '--VALIDATION_STRINGENCY LENIENT',
             params.remove_duplicates ? '--REMOVE_DUPLICATES true' : ''
         ].join(' ').trim()
-        ext.prefix = {"${meta.id}.md.bam"}
+        ext.prefix = {"${meta.id}.md"}
         publishDir  = [
             [
                 path: { "${params.outdir}/preprocessing/${meta.id}" },
@@ -207,7 +207,7 @@ process {
         ]
     }
 
-    withName: '.*:BAM_MARKDUPLICATES:SAMTOOLS_INDEX' {
+    withName: '.*:BAM_MARKDUPLICATES_PICARD:SAMTOOLS_INDEX' {
         ext.args    = params.bam_csi_index ? '-c' : ''
         ext.prefix  = {"${meta.id}.md"}
         publishDir  = [
