fix usage of some reference files

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,15 @@ params {
     save_merged_fastq               = false
     feature_type                    = 'exon'
 
+    dbsnp                           = null
+    dbsnp_tbi                       = null
+    dict                            = null
+    exon_bed                        = null
+    fasta_fai                       = null
+    gff                             = null
+    known_indels                    = null
+    known_indels_tbi                = null
+
     // Sequence read information
     read_length                     = 150 // Required for STAR to build index and align reads
 
