--- a/conf/modules.config
+++ b/conf/modules.config
@@ -3,10 +3,10 @@
     Config file for defining DSL2 per module options and publishing paths
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Available keys to override module options:
-        ext.args   = Additional arguments appended to command in module.
-        ext.args2  = Second set of arguments appended to command in module (multi-tool modules).
-        ext.args3  = Third set of arguments appended to command in module (multi-tool modules).
-        ext.prefix = File name prefix for output files.
+        ext.args    = Additional arguments appended to command in module.
+        ext.args2   = Second set of arguments appended to command in module (multi-tool modules).
+        ext.args3   = Third set of arguments appended to command in module (multi-tool modules).
+        ext.prefix  = File name prefix for output files.
 ----------------------------------------------------------------------------------------
 */
 
@@ -150,7 +150,7 @@ process {
 process {
 
     withName: '.*:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
-        ext.prefix = {"${meta.id}.aligned"}
+        ext.prefix  = {"${meta.id}.aligned"}
         publishDir = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -161,7 +161,7 @@ process {
 
     withName: '.*:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
         ext.args   = params.bam_csi_index ? '-c' : ''
-        ext.prefix = {"${meta.id}.aligned"}
+        ext.prefix  = {"${meta.id}.aligned"}
         publishDir = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -190,7 +190,7 @@ process {
             '--VALIDATION_STRINGENCY LENIENT',
             params.remove_duplicates ? '--REMOVE_DUPLICATES true' : ''
         ].join(' ').trim()
-        ext.prefix = {"${meta.id}.md"}
+        ext.prefix  = {"${meta.id}.md"}
         publishDir  = [
             [
                 path: { "${params.outdir}/preprocessing/${meta.id}" },
@@ -255,7 +255,7 @@ if(!params.skip_baserecalibration) {
                 '--use-original-qualities',
                 '--add-output-sam-program-record'
             ].join(' ').trim()
-            ext.prefix = {"${meta.id}.recal"}
+            ext.prefix  = {"${meta.id}.recal"}
             publishDir  = [
                 path: { "${params.outdir}/preprocessing/${meta.id}" },
                 mode: params.publish_dir_mode,
@@ -266,7 +266,7 @@ if(!params.skip_baserecalibration) {
 
         withName: '.*:RECALIBRATE:SAMTOOLS_INDEX' {
             ext.args    = params.bam_csi_index ? '-c' : ''
-            ext.prefix = {"${meta.id}.recal"}
+            ext.prefix  = {"${meta.id}.recal"}
             publishDir  = [
                 path: { "${params.outdir}/preprocessing/${meta.id}" },
                 mode: params.publish_dir_mode,
@@ -310,7 +310,7 @@ process {
 
     withName: TABIX_TABIX {
         ext.args    = params.bam_csi_index ? '--csi' : ''
-        ext.prefix = {"${meta.id}.haplotypecaller"}
+        ext.prefix  = {"${meta.id}.haplotypecaller"}
         publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -319,7 +319,7 @@ process {
     }
 
     withName: GATK4_VARIANTFILTRATION {
-        ext.prefix = {"${meta.id}.haplotypecaller.filtered"}
+        ext.prefix  = {"${meta.id}.haplotypecaller.filtered"}
         ext.args    = [
             params.gatk_vf_window_size ? "--window $params.gatk_vf_window_size" : '',
             params.gatk_vf_cluster_size ? "--cluster $params.gatk_vf_cluster_size" : '',
@@ -331,5 +331,9 @@ process {
             mode: params.publish_dir_mode,
             pattern: "*.{vcf.gz,vcf.gz.tbi}"
         ]
+    }
+
+    withName:  'NFCORE_RNAVAR:RNAVAR:GATK4_BEDTOINTERVALLIST' {
+        ext.args = '--DROP_MISSING_CONTIGS TRUE'
     }
 }
