just pipeline tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         NXF_VER:
           - "24.04.2"
           - "latest-everything"
-        filter: ["workflow", "function", "pipeline"]
+        filter: ["pipeline"]
         # filter: ["process", "workflow", "function", "pipeline"]
         profile: ["conda", "docker", "singularity"]
         shard: [1, 2, 3, 4]
