finish up the implementation

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -220,6 +220,7 @@ process {
 
     withName: '.*:SPLITNCIGAR:GATK4_SPLITNCIGARREADS' {
         ext.args    =  '--create-output-bam-index false'
+        ext.prefix  = { "${meta.id}.splitncigarreads" }
     }
 
     withName: '.*:SPLITNCIGAR:SAMTOOLS_INDEX' {
