add report param

--- a/nextflow.config
+++ b/nextflow.config
@@ -116,6 +116,7 @@ params {
     custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
     config_profile_contact     = null
     config_profile_url         = null
+    trace_report_suffix        = "${new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')}"
 
     // Schema validation default options
     validate_params            = true
