--- a/nextflow.config
+++ b/nextflow.config
@@ -308,12 +308,12 @@ manifest {
             orcid: ''
         ],
         [
-            name: ' Maxime U Garcia',
-            affiliation: '',
-            email: '',
-            github: '',
-            contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
-            orcid: ''
+            name: 'Maxime U Garcia',
+            affiliation: 'Seqera',
+            email: 'maxime.garcia@seqera.io',
+            github: '@maxulysse',
+            contribution: ['author'], // List of contribution types ('author', 'maintainer' or 'contributor')
+            orcid: '0000-0003-2827-9261'
         ],
     ]
     homePage        = 'https://github.com/nf-core/rnavar'
