allow integer vep_cache_version

--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -19,7 +19,7 @@ params {
             readme            = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/README.txt"
             snpeff_db         = '87'
             snpeff_genome     = 'GRCh37'
-            vep_cache_version = '111'
+            vep_cache_version = 111
             vep_genome        = 'GRCh37'
             vep_species       = 'homo_sapiens'
         }
@@ -30,7 +30,7 @@ params {
             bed12             = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed"
             snpeff_db         = '105'
             snpeff_genome     = 'GRCh38'
-            vep_cache_version = '110'
+            vep_cache_version = 110
             vep_genome        = 'GRCh38'
             vep_species       = 'homo_sapiens'
         }
@@ -47,7 +47,7 @@ params {
             readme            = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/README.txt"
             snpeff_db         = '99'
             snpeff_genome     = 'GRCm38'
-            vep_cache_version = '102'
+            vep_cache_version = 102
             vep_genome        = 'GRCm38'
             vep_species       = 'mus_musculus'
         }
@@ -73,7 +73,7 @@ params {
             readme            = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/README.txt"
             snpeff_db         = '75'
             snpeff_genome     = 'UMD3.1'
-            vep_cache_version = '94'
+            vep_cache_version = 94
             vep_genome        = 'UMD3.1'
             vep_species       = 'bos_taurus'
         }
@@ -84,7 +84,7 @@ params {
             bed12             = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Annotation/Genes/genes.bed"
             snpeff_db         = '105'
             snpeff_genome     = 'WBcel235'
-            vep_cache_version = '111'
+            vep_cache_version = 111
             vep_genome        = 'WBcel235'
             vep_species       = 'caenorhabditis_elegans'
         }
@@ -96,7 +96,7 @@ params {
             readme            = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/README.txt"
             snpeff_db         = '99'
             snpeff_genome     = 'CanFam3.1'
-            vep_cache_version = '104'
+            vep_cache_version = 104
             vep_genome        = 'CanFam3.1'
             vep_species       = 'canis_lupus_familiaris'
         }
@@ -178,7 +178,7 @@ params {
             bed12             = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Annotation/Genes/genes.bed"
             snpeff_db         = '105'
             snpeff_genome     = 'R64-1-1'
-            vep_cache_version = '111'
+            vep_cache_version = 111
             vep_genome        = 'R64-1-1'
             vep_species       = 'saccharomyces_cerevisiae'
         }
@@ -216,7 +216,7 @@ params {
             bed12             = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.bed"
             snpeff_db         = '105'
             snpeff_genome     = 'GRCh38'
-            vep_cache_version = '111'
+            vep_cache_version = 111
             vep_genome        = 'GRCh38'
             vep_species       = 'homo_sapiens'
         }
@@ -228,7 +228,7 @@ params {
             readme            = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/README.txt"
             snpeff_db         = '87'
             snpeff_genome     = 'GRCh37'
-            vep_cache_version = '111'
+            vep_cache_version = 111
             vep_genome        = 'GRCh37'
             vep_species       = 'homo_sapiens'
         }
@@ -240,7 +240,7 @@ params {
             readme            = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/README.txt"
             snpeff_db         = '99'
             snpeff_genome     = 'GRCm38'
-            vep_cache_version = '102'
+            vep_cache_version = 102
             vep_genome        = 'GRCm38'
             vep_species       = 'mus_musculus'
         }
