--- a/conf/test.config
+++ b/conf/test.config
@@ -44,7 +44,7 @@ params {
     // Annotation
     snpeff_db         = '105'
     snpeff_genome     = 'WBcel235'
-    vep_cache_version = '110'
+    vep_cache_version = 110
     vep_genome        = 'WBcel235'
     vep_species       = 'caenorhabditis_elegans'
 }
