--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -17,7 +17,7 @@ params {
             gtf               = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/README.txt"
-            snpeff_db         = '87'
+            snpeff_db         = 87
             snpeff_genome     = 'GRCh37'
             vep_cache_version = 111
             vep_genome        = 'GRCh37'
@@ -28,7 +28,7 @@ params {
             star              = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/STARIndex/"
             gtf               = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed"
-            snpeff_db         = '105'
+            snpeff_db         = 105
             snpeff_genome     = 'GRCh38'
             vep_cache_version = 110
             vep_genome        = 'GRCh38'
@@ -45,7 +45,7 @@ params {
             gtf               = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/README.txt"
-            snpeff_db         = '99'
+            snpeff_db         = 99
             snpeff_genome     = 'GRCm38'
             vep_cache_version = 102
             vep_genome        = 'GRCm38'
@@ -71,7 +71,7 @@ params {
             gtf               = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/README.txt"
-            snpeff_db         = '75'
+            snpeff_db         = 75
             snpeff_genome     = 'UMD3.1'
             vep_cache_version = 94
             vep_genome        = 'UMD3.1'
@@ -82,7 +82,7 @@ params {
             star              = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Sequence/STARIndex/"
             gtf               = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Annotation/Genes/genes.bed"
-            snpeff_db         = '105'
+            snpeff_db         = 105
             snpeff_genome     = 'WBcel235'
             vep_cache_version = 111
             vep_genome        = 'WBcel235'
@@ -94,7 +94,7 @@ params {
             gtf               = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/README.txt"
-            snpeff_db         = '99'
+            snpeff_db         = 99
             snpeff_genome     = 'CanFam3.1'
             vep_cache_version = 104
             vep_genome        = 'CanFam3.1'
@@ -176,7 +176,7 @@ params {
             star              = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Sequence/STARIndex/"
             gtf               = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Annotation/Genes/genes.bed"
-            snpeff_db         = '105'
+            snpeff_db         = 105
             snpeff_genome     = 'R64-1-1'
             vep_cache_version = 111
             vep_genome        = 'R64-1-1'
@@ -214,7 +214,7 @@ params {
             star              = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Sequence/STARIndex/"
             gtf               = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.bed"
-            snpeff_db         = '105'
+            snpeff_db         = 105
             snpeff_genome     = 'GRCh38'
             vep_cache_version = 111
             vep_genome        = 'GRCh38'
@@ -226,7 +226,7 @@ params {
             gtf               = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/README.txt"
-            snpeff_db         = '87'
+            snpeff_db         = 87
             snpeff_genome     = 'GRCh37'
             vep_cache_version = 111
             vep_genome        = 'GRCh37'
@@ -238,7 +238,7 @@ params {
             gtf               = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/Genes/genes.gtf"
             bed12             = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/Genes/genes.bed"
             readme            = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/README.txt"
-            snpeff_db         = '99'
+            snpeff_db         = 99
             snpeff_genome     = 'GRCm38'
             vep_cache_version = 102
             vep_genome        = 'GRCm38'
