--- a/conf/modules.config
+++ b/conf/modules.config
@@ -121,7 +121,8 @@ process {
             params.star_twopass ? '--twopassMode Basic' : '',
             params.star_max_memory_bamsort > 0 ? "--limitBAMsortRAM ${params.star_max_memory_bamsort}" : "",
             params.star_bins_bamsort > 0 ? "--outBAMsortingBinsN ${params.star_bins_bamsort}" : "",
-            params.star_max_collapsed_junc > 0 ? "--limitOutSJcollapsed ${params.star_max_collapsed_junc}" : ""
+            params.star_max_collapsed_junc > 0 ? "--limitOutSJcollapsed ${params.star_max_collapsed_junc}" : "",
+            params.star_max_intron_size ? "--alignIntronMax ${params.star_max_intron_size}" : ""
             ].flatten().unique(false).join(' ').trim() }
         publishDir = [
             [
