--- a/nextflow.config
+++ b/nextflow.config
@@ -29,6 +29,7 @@ params {
     star_max_memory_bamsort         = 0         // STAR parameter limitBAMsortRAM to specify maximum RAM for sorting BAM
     star_bins_bamsort               = 50        // STAR parameter outBAMsortingBinsN to specify number of bins for sorting BAM
     star_max_collapsed_junc         = 1000000   // STAR parameter limitOutSJcollapsed to specify max number of collapsed junctions
+    star_max_intron_size            = null      // STAR parameter alignIntronMax to specify the max intron size
     seq_center                      = null
     seq_platform                    = 'illumina' // Required for preparing for BAM headers for GATK to work
     bam_csi_index                   = false
