--- a/conf/modules.config
+++ b/conf/modules.config
@@ -322,10 +322,10 @@ process {
     withName: GATK4_VARIANTFILTRATION {
         ext.prefix  = {"${meta.id}.haplotypecaller.filtered"}
         ext.args    = [
-            params.gatk_vf_window_size ? "--window $params.gatk_vf_window_size" : '',
-            params.gatk_vf_cluster_size ? "--cluster $params.gatk_vf_cluster_size" : '',
-            params.gatk_vf_fs_filter ? "--filter-name \"FS\" --filter \"FS > $params.gatk_vf_fs_filter\" " : '',
-            params.gatk_vf_qd_filter ? "--filter-name \"QD\" --filter \"QD < $params.gatk_vf_qd_filter\" " : '',
+            params.gatk_vf_window_size ? "--cluster-window-size $params.gatk_vf_window_size" : '',
+            params.gatk_vf_cluster_size ? "--cluster-size $params.gatk_vf_cluster_size" : '',
+            params.gatk_vf_fs_filter ? "--filter-name \"FS\" --filter-expression \"FS > $params.gatk_vf_fs_filter\" " : '',
+            params.gatk_vf_qd_filter ? "--filter-name \"QD\" --filter-expression \"QD < $params.gatk_vf_qd_filter\" " : '',
         ].join(' ').trim()
         publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
