add star index error handling

--- a/conf/test.config
+++ b/conf/test.config
@@ -22,6 +22,8 @@ params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
+    pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
+
     // Input data
     input = "${projectDir}/tests/csv/1.0/fastq_single.csv"
 
