--- a/conf/modules.config
+++ b/conf/modules.config
@@ -37,6 +37,12 @@ process {
         ext.args   = params.read_length ? "--sjdbOverhang ${params.read_length - 1}" : ''
     }
 
+    withName: '.*PREPARE_GENOME:UNTAR' {
+        publishDir = [
+            enabled: false
+        ]
+    }
+
     withName: 'STAR_GENOMEGENERATE' {
         publishDir = [
             path: { "${params.outdir}/genome/index" },
