also test functions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         NXF_VER:
           - "24.04.2"
           - "latest-everything"
-        filter: ["pipeline"]
+        filter: ["pipeline", "function"]
         # filter: ["process", "workflow", "function", "pipeline"]
         profile: ["conda", "docker", "singularity"]
         shard: [1, 2, 3, 4]
