first steps to gff handling fixes

--- a/conf/test.config
+++ b/conf/test.config
@@ -31,7 +31,7 @@ params {
     fasta             = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.fasta"
     dict              = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.dict"
     gtf               = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.gtf"
-
+    gtf = null
     // Known genome resources (optional)
     dbsnp             = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz"
     dbsnp_tbi         = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz.tbi"
