--- a/conf/test.config
+++ b/conf/test.config
@@ -22,7 +22,7 @@ params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
-    pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
+    pipelines_testdata_base_path = 'https://github.com/nf-core/test-datasets/raw/refs/heads/rnavar/data'
 
     // Input data
     input = "${projectDir}/tests/csv/1.0/fastq_single.csv"
@@ -32,7 +32,8 @@ params {
 
     fasta             = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.fasta"
     dict              = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.dict"
-    gtf               = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.gtf"
+    // gtf               = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.gtf"
+    gff               = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.gff3"
 
     // Known genome resources (optional)
     dbsnp             = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz"
