add exon bed filter step (credits to @Shaun-Regenbaum)

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -49,6 +49,16 @@ process {
         ]
     }
 
+    withName: REMOVE_UNKNOWN_REGIONS {
+        ext.prefix = { "${meta.id}.exon" }
+        publishDir = [
+            path: { "${params.outdir}/genome" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_reference
+        ]
+    }
+
     withName: 'STAR_GENOMEGENERATE' {
         publishDir = [
             path: { "${params.outdir}/genome/index" },
