--- a/nextflow.config
+++ b/nextflow.config
@@ -70,6 +70,7 @@ params {
     skip_intervallisttools          = false
     skip_variantfiltration          = false
     skip_variantannotation          = false
+    skip_exon_bed_check             = false
 
     // GATK intervallist parameters
     gatk_interval_scatter_count     = 25
