Add UMI extraction

--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,11 @@ params {
 
     // Preprocessing of alignment
     remove_duplicates               = false
+    extract_umi                     = false
+    umitools_extract_method         = 'string'
+    umitools_bc_pattern             = null
+    umitools_bc_pattern2            = null
+    umitools_umi_separator          = null
 
     // Variant calling
     no_intervals                    = false
