--- a/conf/modules.config
+++ b/conf/modules.config
@@ -132,6 +132,16 @@ process {
 // ALIGNMENT
 process {
 
+    // UMITOOLS_EXTRACT
+    withName: UMITOOLS_EXTRACT {
+        ext.args   = { [
+                params.umitools_extract_method                  ? "--extract-method=${params.umitools_extract_method}" : '',
+                params.umitools_bc_pattern                      ? "--bc-pattern='${params.umitools_bc_pattern}'" : '',
+                params.umitools_bc_pattern2 && !meta.single_end ? "--bc-pattern2='${params.umitools_bc_pattern2}'" : '',
+                params.umitools_umi_separator                   ? "--umi-separator='${params.umitools_umi_separator}'" : ''
+        ].join(' ').trim() }
+    }
+
     // ALIGN_STAR
 
     withName: STAR_ALIGN {
