--- a/conf/modules/annotate.config
+++ b/conf/modules/annotate.config
@@ -16,7 +16,7 @@
 process {
 
     // SNPEFF
-    withName: 'SNPEFF_SNPEFF' {
+    withName: 'NFCORE_RNAVAR:.*:SNPEFF_SNPEFF' {
         ext.args   = { '-nodownload -canon -v' }
         ext.prefix = { vcf.baseName - '.vcf' + '_snpEff' }
         publishDir = [
@@ -30,7 +30,7 @@ process {
     }
 
     // VEP
-    withName: 'ENSEMBLVEP_VEP' {
+    withName: 'NFCORE_RNAVAR:.*:ENSEMBLVEP_VEP' {
         ext.args   = { [
             "--stats_file ${vcf.baseName - '.vcf' + '_VEP.ann'}.summary.html",
             (params.vep_dbnsfp && params.dbnsfp && !params.dbnsfp_consequence)    ? "--plugin dbNSFP,${params.dbnsfp.split("/")[-1]},${params.dbnsfp_fields}"                                              : '',
