--- a/conf/modules/prepare_cache.config
+++ b/conf/modules/prepare_cache.config
@@ -16,7 +16,7 @@
 process {
 
     // SNPEFF
-    withName: 'SNPEFF_DOWNLOAD' {
+    withName: 'NFCORE_RNAVAR:.*:SNPEFF_DOWNLOAD' {
         ext.when   = { params.annotate_tools && (params.annotate_tools.split(',').contains('snpeff') || params.annotate_tools.split(',').contains('merge')) }
         publishDir = [
             mode: params.publish_dir_mode,
@@ -25,7 +25,7 @@ process {
     }
 
     // VEP
-    withName: 'ENSEMBLVEP_DOWNLOAD' {
+    withName: 'NFCORE_RNAVAR:.*:ENSEMBLVEP_DOWNLOAD' {
         ext.when   = { params.annotate_tools && (params.annotate_tools.split(',').contains('vep') || params.annotate_tools.split(',').contains('merge')) }
         ext.args   = { '--AUTO c --CONVERT --NO_BIOPERL --NO_HTSLIB --NO_TEST --NO_UPDATE' }
         publishDir = [
