--- a/conf/modules.config
+++ b/conf/modules.config
@@ -24,7 +24,7 @@ process {
 
 process {
 
-    withName: 'NFCORE_RNAVAR:.*:CAT_FASTQ' {
+    withName: 'NFCORE_RNAVAR.*CAT_FASTQ' {
         publishDir = [
             path: { "${params.outdir}/fastq" },
             mode: params.publish_dir_mode,
@@ -33,23 +33,23 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:STAR_GENOMEGENERATE' {
+    withName: 'NFCORE_RNAVAR.*STAR_GENOMEGENERATE' {
         ext.args   = params.read_length ? "--sjdbOverhang ${params.read_length - 1}" : ''
     }
 
-    withName: 'NFCORE_RNAVAR:.*:STAR_INDEXVERSION' {
+    withName: 'NFCORE_RNAVAR.*STAR_INDEXVERSION' {
         publishDir = [
             enabled: false
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:PREPARE_GENOME:UNTAR' {
+    withName: 'NFCORE_RNAVAR.*PREPARE_GENOME:UNTAR' {
         publishDir = [
             enabled: false
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:REMOVE_UNKNOWN_REGIONS' {
+    withName: 'NFCORE_RNAVAR.*REMOVE_UNKNOWN_REGIONS' {
         ext.prefix = { "${meta.id}.exon" }
         publishDir = [
             path: { "${params.outdir}/genome" },
@@ -59,7 +59,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:STAR_GENOMEGENERATE' {
+    withName: 'NFCORE_RNAVAR.*STAR_GENOMEGENERATE' {
         publishDir = [
             path: { "${params.outdir}/genome/index" },
             mode: params.publish_dir_mode,
@@ -68,7 +68,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:GFFREAD' {
+    withName: 'NFCORE_RNAVAR.*GFFREAD' {
         ext.args    = '--keep-exon-attrs -F -T'
         publishDir  = [
             path: { "${params.outdir}/genome" },
@@ -78,7 +78,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:GTF2BED' {
+    withName: 'NFCORE_RNAVAR.*GTF2BED' {
         publishDir = [
             path: { "${params.outdir}/genome" },
             mode: params.publish_dir_mode,
@@ -87,7 +87,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:SAMTOOLS_FAIDX' {
+    withName: 'NFCORE_RNAVAR.*SAMTOOLS_FAIDX' {
         publishDir = [
             path: { "${params.outdir}/genome" },
             mode: params.publish_dir_mode,
@@ -96,7 +96,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:GATK4_CREATESEQUENCEDICTIONARY' {
+    withName: 'NFCORE_RNAVAR.*GATK4_CREATESEQUENCEDICTIONARY' {
         publishDir = [
             path: { "${params.outdir}/genome" },
             mode: params.publish_dir_mode,
@@ -110,7 +110,7 @@ process {
 
 process {
 
-    withName: 'NFCORE_RNAVAR:.*:MULTIQC' {
+    withName: 'NFCORE_RNAVAR.*MULTIQC' {
         ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
         publishDir = [
             path: { "${params.outdir}/reports"},
@@ -120,7 +120,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:FASTQC' {
+    withName: 'NFCORE_RNAVAR.*FASTQC' {
         ext.args    = '--quiet'
         publishDir  = [
             enabled: false
@@ -132,7 +132,7 @@ process {
 process {
 
     // UMITOOLS_EXTRACT
-    withName: 'NFCORE_RNAVAR:.*:UMITOOLS_EXTRACT' {
+    withName: 'NFCORE_RNAVAR.*UMITOOLS_EXTRACT' {
         ext.args   = { [
                 params.umitools_extract_method                  ? "--extract-method=${params.umitools_extract_method}" : '',
                 params.umitools_bc_pattern                      ? "--bc-pattern='${params.umitools_bc_pattern}'" : '',
@@ -143,7 +143,7 @@ process {
 
     // ALIGN_STAR
 
-    withName: 'NFCORE_RNAVAR:.*:STAR_ALIGN' {
+    withName: 'NFCORE_RNAVAR.*STAR_ALIGN' {
         ext.args   = { [
             '--outSAMtype BAM SortedByCoordinate',
             '--readFilesCommand zcat',
@@ -181,7 +181,7 @@ process {
 
 process {
 
-    withName: 'NFCORE_RNAVAR:.*:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
+    withName: 'NFCORE_RNAVAR.*ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
         ext.prefix  = {"${meta.id}.aligned"}
         publishDir = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
@@ -191,7 +191,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
+    withName: 'NFCORE_RNAVAR.*ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
         ext.args   = params.bam_csi_index ? '-c' : ''
         ext.prefix  = {"${meta.id}.aligned"}
         publishDir = [
@@ -202,11 +202,11 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:GATK4_BEDTOINTERVALLIST' {
+    withName: 'NFCORE_RNAVAR.*GATK4_BEDTOINTERVALLIST' {
         publishDir  = [ enabled: false ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:GATK4_INTERVALLISTTOOLS' {
+    withName: 'NFCORE_RNAVAR.*GATK4_INTERVALLISTTOOLS' {
         ext.args   = [
             '--SUBDIVISION_MODE BALANCING_WITHOUT_INTERVAL_SUBDIVISION_WITH_OVERFLOW',
             '--UNIQUE true',
@@ -216,7 +216,7 @@ process {
         publishDir  = [ enabled: false ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:PICARD_MARKDUPLICATES' {
+    withName: 'NFCORE_RNAVAR.*PICARD_MARKDUPLICATES' {
         ext.args   = [
             '--ASSUME_SORTED true',
             '--VALIDATION_STRINGENCY LENIENT',
@@ -239,7 +239,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:BAM_MARKDUPLICATES_PICARD:SAMTOOLS_INDEX' {
+    withName: 'NFCORE_RNAVAR.*BAM_MARKDUPLICATES_PICARD:SAMTOOLS_INDEX' {
         ext.args    = params.bam_csi_index ? '-c' : ''
         ext.prefix  = {"${meta.id}.md"}
         publishDir  = [
@@ -250,20 +250,20 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:SPLITNCIGAR:GATK4_SPLITNCIGARREADS' {
+    withName: 'NFCORE_RNAVAR.*SPLITNCIGAR:GATK4_SPLITNCIGARREADS' {
         ext.args    =  '--create-output-bam-index false'
         ext.prefix  = { "${meta.id}.splitncigarreads" }
     }
 
-    withName: 'NFCORE_RNAVAR:.*:SPLITNCIGAR:SAMTOOLS_INDEX' {
+    withName: 'NFCORE_RNAVAR.*SPLITNCIGAR:SAMTOOLS_INDEX' {
         ext.args    =  params.bam_csi_index ? '-c' : ''
     }
 
-    withName: 'NFCORE_RNAVAR:.*:SPLITNCIGAR:.*' {
+    withName: 'NFCORE_RNAVAR.*SPLITNCIGAR:*' {
         publishDir  = [ enabled: false ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:SAMTOOLS_STATS|SAMTOOLS_FLAGSTAT|SAMTOOLS_IDXSTATS' {
+    withName: 'NFCORE_RNAVAR.*SAMTOOLS_STATS|SAMTOOLS_FLAGSTAT|SAMTOOLS_IDXSTATS' {
             publishDir  = [
                 path: { "${params.outdir}/reports/stats/${meta.id}" },
                 mode: params.publish_dir_mode,
@@ -277,12 +277,12 @@ process {
 // BASE RECALIBRATION PROCESS
 process {
 
-    withName: 'NFCORE_RNAVAR:.*:GATK4_BASERECALIBRATOR' {
+    withName: 'NFCORE_RNAVAR.*GATK4_BASERECALIBRATOR' {
         ext.args    =  '--use-original-qualities'
         publishDir  = [ enabled: false ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:RECALIBRATE:APPLYBQSR' {
+    withName: 'NFCORE_RNAVAR.*RECALIBRATE:APPLYBQSR' {
         ext.args    = [
             '--use-original-qualities',
             '--add-output-sam-program-record'
@@ -296,7 +296,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:RECALIBRATE:SAMTOOLS_INDEX' {
+    withName: 'NFCORE_RNAVAR.*RECALIBRATE:SAMTOOLS_INDEX' {
         ext.args    = params.bam_csi_index ? '-c' : ''
         ext.prefix  = {"${meta.id}.recal"}
         publishDir  = [
@@ -313,7 +313,7 @@ process {
 
 process {
 
-    withName: 'NFCORE_RNAVAR:.*:GATK4_HAPLOTYPECALLER' {
+    withName: 'NFCORE_RNAVAR.*GATK4_HAPLOTYPECALLER' {
         ext.args    = [
             '--dont-use-soft-clipped-bases',
             '--create-output-variant-index true',
@@ -323,7 +323,7 @@ process {
         publishDir  = [ enabled: false ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:GATK4_MERGEVCFS' {
+    withName: 'NFCORE_RNAVAR.*GATK4_MERGEVCFS' {
         ext.prefix  = {"${meta.id}.haplotypecaller"}
         publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
@@ -331,7 +331,7 @@ process {
             pattern: "*.{vcf.gz}"
         ]
     }
-    withName: 'NFCORE_RNAVAR:.*:GATK4_COMBINEGVCFS' {
+    withName: 'NFCORE_RNAVAR.*GATK4_COMBINEGVCFS' {
         ext.prefix  = {"${meta.id}.haplotypecaller"}
         publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
@@ -340,7 +340,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:TABIX_TABIX' {
+    withName: 'NFCORE_RNAVAR.*TABIX_TABIX' {
         ext.args    = params.bam_csi_index ? '--csi' : ''
         ext.prefix  = {"${meta.id}.haplotypecaller"}
         publishDir  = [
@@ -350,7 +350,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_RNAVAR:.*:GATK4_VARIANTFILTRATION' {
+    withName: 'NFCORE_RNAVAR.*GATK4_VARIANTFILTRATION' {
         ext.prefix  = {"${meta.id}.haplotypecaller.filtered"}
         ext.args    = [
             params.gatk_vf_window_size ? "--cluster-window-size $params.gatk_vf_window_size" : '',
@@ -365,7 +365,7 @@ process {
         ]
     }
 
-    withName:  'NFCORE_RNAVAR:.*:GATK4_BEDTOINTERVALLIST' {
+    withName: 'NFCORE_RNAVAR.*GATK4_BEDTOINTERVALLIST' {
         ext.args = '--DROP_MISSING_CONTIGS TRUE'
     }
 }
