--- a/nextflow.config
+++ b/nextflow.config
@@ -322,6 +322,14 @@ manifest {
             contribution: ['author'], // List of contribution types ('author', 'maintainer' or 'contributor')
             orcid: '0000-0003-2827-9261'
         ],
+        [
+            name: 'Nicolas Vannieuwkerke',
+            affiliation: 'CMGG',
+            email: 'nicolas.vannieuwkerke@ugent.be',
+            github: '@nvnieuwk',
+            contribution: ['maintainer'], // List of contribution types ('author', 'maintainer' or 'contributor')
+            orcid: '0009-0003-5619-1555'
+        ]
     ]
     homePage        = 'https://github.com/nf-core/rnavar'
     description     = """GATK4 RNA variant calling pipeline"""
