add vcf_annotate_all tests

--- a/tests/nextflow.config
+++ b/tests/nextflow.config
@@ -10,3 +10,11 @@
 params {
     modules_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
 }
+
+process {
+    resourceLimits = [
+        cpus: 4,
+        memory: '15.GB',
+        time: '1.h'
+    ]
+}
