--- a/nextflow.config
+++ b/nextflow.config
@@ -305,13 +305,12 @@ manifest {
     name            = 'nf-core/rnavar'
     author          = """Praveen Raj, Maxime U Garcia""" // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
     contributors    = [
-        // TODO nf-core: Update the field with the details of the contributors to your pipeline. New with Nextflow version 24.10.0
         [
             name: 'Praveen Raj',
             affiliation: '',
             email: '',
             github: '',
-            contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
+            contribution: [],
             orcid: ''
         ],
         [
@@ -319,7 +318,7 @@ manifest {
             affiliation: 'Seqera',
             email: 'maxime.garcia@seqera.io',
             github: '@maxulysse',
-            contribution: ['author'], // List of contribution types ('author', 'maintainer' or 'contributor')
+            contribution: ['author'],
             orcid: '0000-0003-2827-9261'
         ],
         [
@@ -327,7 +326,7 @@ manifest {
             affiliation: 'CMGG',
             email: 'nicolas.vannieuwkerke@ugent.be',
             github: '@nvnieuwk',
-            contribution: ['maintainer'], // List of contribution types ('author', 'maintainer' or 'contributor')
+            contribution: ['maintainer'],
             orcid: '0009-0003-5619-1555'
         ]
     ]
