--- a/tests/nextflow.config
+++ b/tests/nextflow.config
@@ -9,6 +9,7 @@
 
 params {
     modules_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
+    pipelines_testdata_base_path = 'https://github.com/nf-core/test-datasets/raw/refs/heads/rnavar/data'
 }
 
 process {
