--- a/.github/actions/nf-test/action.yml
+++ b/.github/actions/nf-test/action.yml
@@ -70,6 +70,7 @@ runs:
           --tap=test.tap \
           --verbose \
           --ci \
+          --changed-since HEAD^ \
           --shard ${{ inputs.shard }}/${{ inputs.total_shards }} \
           --filter function,workflow,pipeline
 
