update annotation related code

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,7 @@
 params {
     // Input options
     input                           = null // sample sheet
+    tools                           = null  // List of annotation tools to run - snpeff or vep or merge
 
     // References
     genome                          = 'GRCh38'
@@ -48,7 +49,6 @@ params {
     no_intervals                    = false
 
     // Variant annotation
-    annotate_tools            = null  // List of annotation tools to run - snpeff or vep or merge
     download_cache            = false // Do not download annotation cache
     dbnsfp                    = null // No dbnsfp processed file
     dbnsfp_consequence        = null // No default consequence for dbnsfp plugin
