--- a/conf/modules/annotate.config
+++ b/conf/modules/annotate.config
@@ -24,7 +24,7 @@ process {
                 mode: params.publish_dir_mode,
                 path: { "${params.outdir}/reports/snpeff/${meta.variantcaller}/${meta.id}/" },
                 pattern: "*{csv,html,genes.txt}",
-                saveAs: { params.annotate_tools.split(',').contains('snpeff') ? it : null }
+                saveAs: { params.tools.split(',').contains('snpeff') ? it : null }
             ]
         ]
     }
@@ -99,7 +99,7 @@ process {
             mode: params.publish_dir_mode,
             path: { "${params.outdir}/annotation/${meta.variantcaller}/${meta.id}/" },
             pattern: "*{gz,gz.tbi}",
-            saveAs: { params.annotate_tools.split(',').contains('snpeff') ? it : null }
+            saveAs: { params.tools.split(',').contains('snpeff') ? it : null }
         ]
     }
 }
