--- a/conf/test.config
+++ b/conf/test.config
@@ -45,8 +45,7 @@ params {
     star_index        = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/index/star/star.tar.gz"
 
     // Annotation
-    snpeff_db         = 105
-    snpeff_genome     = 'WBcel235'
+    snpeff_db         = 'WBcel235.105'
     vep_cache_version = 110
     vep_genome        = 'WBcel235'
     vep_species       = 'caenorhabditis_elegans'
