add start from vcf

--- a/conf/modules/annotate.config
+++ b/conf/modules/annotate.config
@@ -22,7 +22,7 @@ process {
         publishDir = [
             [
                 mode: params.publish_dir_mode,
-                path: { "${params.outdir}/reports/snpeff/${meta.variantcaller}/${meta.id}/" },
+                path: { "${params.outdir}/reports/snpeff/${meta.id}/" },
                 pattern: "*{csv,html,genes.txt}",
                 saveAs: { params.tools.split(',').contains('snpeff') ? it : null }
             ]
@@ -46,12 +46,12 @@ process {
         publishDir = [
             [
                 mode: params.publish_dir_mode,
-                path: { "${params.outdir}/reports/EnsemblVEP/${meta.variantcaller}/${meta.id}/" },
+                path: { "${params.outdir}/reports/EnsemblVEP/${meta.id}/" },
                 pattern: "*html"
             ],
             [
                 mode: params.publish_dir_mode,
-                path: { "${params.outdir}/annotation/${meta.variantcaller}/${meta.id}/" },
+                path: { "${params.outdir}/annotation/${meta.id}/" },
                 pattern: "*{gz}"
             ]
         ]
@@ -63,7 +63,7 @@ process {
         ext.prefix = { input.baseName - '.vcf' + '_BCF.ann' }
         publishDir = [
                 mode: params.publish_dir_mode,
-                path: { "${params.outdir}/annotation/${meta.variantcaller}/${meta.id}/" },
+                path: { "${params.outdir}/annotation/${meta.id}/" },
                 pattern: "*{gz}"
             ]
     }
@@ -89,7 +89,7 @@ process {
         ext.prefix = { input.name - '.vcf' }
         publishDir = [
                 mode: params.publish_dir_mode,
-                path: { "${params.outdir}/annotation/${meta.variantcaller}/${meta.id}/" },
+                path: { "${params.outdir}/annotation/${meta.id}/" },
                 pattern: "*{gz.tbi}"
         ]
     }
@@ -97,7 +97,7 @@ process {
     withName: 'NFCORE_RNAVAR:RNAVAR:VCF_ANNOTATE_ALL:VCF_ANNOTATE_SNPEFF:TABIX_BGZIPTABIX' {
         publishDir = [
             mode: params.publish_dir_mode,
-            path: { "${params.outdir}/annotation/${meta.variantcaller}/${meta.id}/" },
+            path: { "${params.outdir}/annotation/${meta.id}/" },
             pattern: "*{gz,gz.tbi}",
             saveAs: { params.tools.split(',').contains('snpeff') ? it : null }
         ]
