--- a/tests/.nftignore
+++ b/tests/.nftignore
@@ -1,4 +1,3 @@
-
 .DS_Store
 annotation/test/*.ann.vcf.gz
 annotation/test/*.ann.vcf.gz.tbi
@@ -12,3 +11,5 @@ reports/multiqc_data/multiqc_sources.txt
 reports/multiqc_data/picard_deduplication.txt
 reports/multiqc_plots/{svg,pdf,png}/*.{svg,pdf,png}
 reports/multiqc_report.html
+reports/snpeff/*/*_snpEff.csv
+reports/snpeff/*/snpEff_summary.html
