address config comments

--- a/conf/modules/annotate.config
+++ b/conf/modules/annotate.config
@@ -23,8 +23,7 @@ process {
             [
                 mode: params.publish_dir_mode,
                 path: { "${params.outdir}/reports/snpeff/${meta.id}/" },
-                pattern: "*{csv,html,genes.txt}",
-                saveAs: { params.tools.split(',').contains('snpeff') ? it : null }
+                pattern: "*{csv,html,genes.txt}"
             ]
         ]
     }
@@ -98,8 +97,7 @@ process {
         publishDir = [
             mode: params.publish_dir_mode,
             path: { "${params.outdir}/annotation/${meta.id}/" },
-            pattern: "*{gz,gz.tbi}",
-            saveAs: { params.tools.split(',').contains('snpeff') ? it : null }
+            pattern: "*{gz,gz.tbi}"
         ]
     }
 }
