readd saveAs in config

--- a/conf/modules/annotate.config
+++ b/conf/modules/annotate.config
@@ -23,7 +23,8 @@ process {
             [
                 mode: params.publish_dir_mode,
                 path: { "${params.outdir}/reports/snpeff/${meta.id}/" },
-                pattern: "*{csv,html,genes.txt}"
+                pattern: "*{csv,html,genes.txt}",
+                saveAs: { params.tools.split(',').contains('snpeff') ? it : null }
             ]
         ]
     }
@@ -97,7 +98,8 @@ process {
         publishDir = [
             mode: params.publish_dir_mode,
             path: { "${params.outdir}/annotation/${meta.id}/" },
-            pattern: "*{gz,gz.tbi}"
+            pattern: "*{gz,gz.tbi}",
+            saveAs: { params.tools.split(',').contains('snpeff') ? it : null }
         ]
     }
 }
