cache conda envs

--- a/tests/nextflow.config
+++ b/tests/nextflow.config
@@ -19,3 +19,17 @@ process {
         time: '1.h'
     ]
 }
+
+profiles {
+    conda {
+        conda.enabled           = true
+        docker.enabled          = false
+        singularity.enabled     = false
+        podman.enabled          = false
+        shifter.enabled         = false
+        charliecloud.enabled    = false
+        apptainer.enabled       = false
+        conda.channels          = ['conda-forge', 'bioconda']
+        conda.cacheDir          = '../../shared/conda'
+    }
+}
